@@ -1,4 +1,8 @@
-﻿svs 15.04.2014 12:37:20 +0400 - build 3866
+﻿drkns 15.04.2014 22:31:59 +0200 - build 3867
+
+1. В 3857 немного погнулся переход по +/- во вьювере.
+
+svs 15.04.2014 12:37:20 +0400 - build 3866
 
 1. Mantis#0002647: DM_SETFOCUS работает неправильно в присутствии элемента с DIF_NOFOCUS
     Перед сменой фокуса принудительно очистим флаг DIF_FOCUS у всех элементов.
